--- a/explorience-front/src/locales/zh.json
+++ b/explorience-front/src/locales/zh.json
@@ -5,5 +5,12 @@
     "allDest": "所有目的地",
     "service": "服务",
     "about": "关于我们",
-    "contact": "联系我们"
+    "contact": "联系我们",
+    "slogan": "探索新世界，发现更多惊喜",
+    "wuhan": "武汉",
+    "beijing": "北京",
+    "shanghai": "上海",
+    "guangzhou": "广州",
+    "chengdu": "成都",
+    "visaGuide": "签证指南"
 }
