--- a/explorience-front/src/locales/en.json
+++ b/explorience-front/src/locales/en.json
@@ -5,5 +5,12 @@
     "allDest": "All Destinations",
     "service": "Services",
     "about": "About Us",
-    "contact": "Contact Us"
+    "contact": "Contact Us",
+    "slogan": "Explore the world, wounderful experiencies!",
+    "wuhan": "Wuhan",
+    "shanghai": "Shanghai",
+    "beijing": "Beijing",
+    "guangzhou": "Guangzhou",
+    "chengdu": "Chengdu",
+    "visaGuide": "Visa Application Guide"
 }
