--- a/explorience-front/src/locales/zh.json
+++ b/explorience-front/src/locales/zh.json
@@ -17,5 +17,8 @@
     "password": "密码",
     "reset": "重置",
     "email": "邮箱",
-    "verifyCode": "验证码"
+    "verifyCode": "验证码",
+    "forgetPassword": "忘记密码?",
+    "getCode": "获取验证码",
+    "signup": "没有账号? 注册"
 }
